--- a/saummay_welcome.html
+++ b/saummay_welcome.html
@@ -29,7 +29,7 @@
 			 	}
 		</style>
 		<center>
-		<a href="file:///C:/Users/student/Desktop/New%20folder/saummay1.html" class="button">Let's get Started!</a></center>
+		<a href="saummay1.html" class="button">Let's get Started!</a></center>
 		<p><center><img src="welcome4.gif"></center></p>
 		<marquee  behavior="scroll" direction="right" scrollamount="8">
     <img src="welcome2.gif" width="350" height="150" alt="Natural" />
