--- a/saummay1.html
+++ b/saummay1.html
@@ -35,8 +35,8 @@
     <img src="zzz.png" width="120" height="80" alt="Natural" />
   </marquee>
         <center>
-		<a href="C:\Users\student\Desktop\New folder\saummay_welcome.html" class="button">Don't click Me!</a>
-		<a href="file:///C:/Users/student/Desktop/New%20folder/saummay2.html" class="button">Tap Here!</a></center>
+		<a href="saummay_welcome.html" class="button">Don't click Me!</a>
+		<a href="saummay2.html" class="button">Tap Here!</a></center>
 		<body style="background-color:#04405C;">
 		<style>
 			body {
@@ -47,8 +47,8 @@
 			<font size=5>
 			<center>
 			<form>
-         <button type="submit" formaction="file:///C:/Users/student/Desktop/New%20folder/saummay4.html">Turn off the Light!</button>
-         <button type="submit" formaction="file:///C:/Users/student/Desktop/New%20folder/saummay3.html">ClickBait!!!</button>
+         <button type="submit" formaction="saummay4.html">Turn off the Light!</button>
+         <button type="submit" formaction="saummay3.html">ClickBait!!!</button>
       </form>
       </form>
 			</center>
