--- a/saummay2.html
+++ b/saummay2.html
@@ -46,7 +46,7 @@
 				background-image: url('myImage2.gif'); 
 			 	}
 			</style>
-			<a href="file:///C:/Users/student/Desktop/New%20folder/saummay1.html" class="button">Go Back!</a>
+			<a href="saummay1.html" class="button">Go Back!</a>
 			<font size=5>
 			<center>
 
