--- a/saummay3.html
+++ b/saummay3.html
@@ -46,7 +46,7 @@
 		</style>
 			<b>
 			<b>
-			<a href="file:///C:/Users/student/Desktop/New%20folder/saummay1.html" class="button">Go Back!</a>
+			<a href="saummay1.html" class="button">Go Back!</a>
 			<font size=5>
 			<p><img style="padding: 0 15px; float: right;" src="books.gif"width="350" height="320"></p>
 <left>
