--- a/saummay4.html
+++ b/saummay4.html
@@ -42,7 +42,7 @@
 			<b>
 			<b>
 			<center>
-			<a href="file:///C:/Users/student/Desktop/New%20folder/saummay1.html" class="button">Go Back!</a></center>
+			<a href="saummay1.html" class="button">Go Back!</a></center>
 			<font size=5>
 		<center>	
 		<audio controls>
