--- a/saummay1.html
+++ b/saummay1.html
@@ -35,7 +35,7 @@
     <img src="zzz.png" width="120" height="80" alt="Natural" />
   </marquee>
         <center>
-		<a href="saummay_welcome.html" class="button">Don't click Me!</a>
+		<a href="index.html" class="button">Don't click Me!</a>
 		<a href="saummay2.html" class="button">Tap Here!</a></center>
 		<body style="background-color:#04405C;">
 		<style>
